test/src/e2e_vm_tests/test_programs/should_fail/arith_overflow/u16_sub_underflow/src/main.sw
script;

fn main() -> u16 {
    let a: u16 = u16::min();
    let b: u16 = 1;

    let result: u16 = a - b;
    result
}
